ADD: documentation for Postman

--- a/RestWithASPNET/appsettings.json
+++ b/RestWithASPNET/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySqlConnection": {
-    "MySqlConnectionString": "Server=localhost;DataBase=rest_with_asp_net;Uid=root;Pwd=root"
+    "MySqlConnectionString": "Server=localhost;DataBase=rest_with_asp_net;Uid=??;Pwd=??"
   },
   "TokenConfigurations": {
     "Audience": "ExempleAudience",
